# napari-5d-vibrios-viewer

./: .pre-commit-config.yaml  LICENSE  README.md  cross_correlation.ipynb  pyproject.toml  setup.cfg  tox.ini
src/napari_5d_vibrios_viewer/: _widget.py  helpers.py  napari.yaml
src/napari_5d_vibrios_viewer/_tests/: test_dock_widget.py
