[metadata]
name = napari-5d-vibrios-viewer
description = Open separate tif files in napari as n-d file.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gatoniel/napari-5d-vibrios-viewer
author = Niklas Netter
author_email = niknett@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/gatoniel/napari-5d-vibrios-viewer/issues
    Documentation = https://github.com/gatoniel/napari-5d-vibrios-viewer#README.md
    Source Code = https://github.com/gatoniel/napari-5d-vibrios-viewer
    User Support = https://github.com/gatoniel/napari-5d-vibrios-viewer/issues

[options]
packages = find:
install_requires =
    dask-image
    numpy
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-5d-vibrios-viewer = napari_5d_vibrios_viewer:napari.yaml

[options.package_data]
* = *.yaml
